<resources>
    <string name="app_name">Breathe Again</string>
    <string name="title_home">Home</string>
    <string name="title_craving">Mindfulness</string>
    <string name="title_share">Achievements</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="name">Full Name</string>
    <string name="how_many_cigarettes">How many cigarettes per day?</string>
    <string name="sing_up">Sign Up</string>
    <string name="sign_in_with_phone">Sign in with Phone</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="days_smoke_free">Days Smoke-Free:</string>
    <string name="money_saved">Money Saved:</string>
    <string name="craving">CRAVING</string>
    <string name="breathe_again_progress">Breathe Again 🫁🧘‍♂️</string>
    <string name="_100">$100</string>
    <string name="share_progress">Share Progress</string>
    <string name="Mindfulness">Mindfulness 🧘</string>
    <string name="reset_button">reset button</string>
    <string name="smoke_free_days_15">Smoke free days: 15</string>
    <string name="money_saved_100">Money Saved: $100</string>
    <string name="share_your_progress">SHARE YOUR PROGRESS</string>
    <string name="breathing_exercise">Breathing Exercise</string>
    <string name="delete_all">Delete All</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="reminder">Reminder</string>
    <string name="start_date">Start Date</string>
    <string name="no_achievements_to_display">No achievements to display</string>
    <string name="day_free">Day Free</string>
    <string name="save_money">Save Money</string>
    <string name="log_out">Log Out</string>
    <string name="craving_management">Craving Management</string>
    <string name="manage_your_cravings">Manage Your Cravings</string>
    <string name="inspiring_stories">Inspiring Stories</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="inhale">Inhale</string>
    <string name="stop_exercise">stop exercise</string>
    <string name="breathe_your_way_to_freedom">Breathe Your Way to Freedom</string>
    <string name="inspirational_stories">Inspirational Stories</string>
    <string name="all_achievements">All Achievements</string>
    <string name="_05_00">05:00</string>
    <string name="here_you_can_see_your_app_notifications">Here you can see your app notifications</string>
    <string name="choose_puzzle">Choose Your Puzzle</string>
    <string name="recycler_view_desc">Image selection for the puzzle</string>
    <string name="restart">RESTART</string>
    <string name="game_run_from_cigarette">Game Run From Cigarette</string>

</resources>