<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.finalproject_breathe_again.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

    </fragment>


    <fragment
        android:id="@+id/navigation_craving"
        android:name="com.example.finalproject_breathe_again.ui.craving.CravingFragment"
        android:label="@string/title_craving"
        tools:layout="@layout/fragment_craving">
        <action
            android:id="@+id/action_cravingFragment_to_storyFragment"
            app:destination="@id/storyFragment"/>
        <action
            android:id="@+id/action_cravingFragment_to_breathingFragment"
            app:destination="@id/breathingFragment"/>


    </fragment>


    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.finalproject_breathe_again.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />


    <fragment
        android:id="@+id/navigation_share"
        android:name="com.example.finalproject_breathe_again.ui.share.ShareFragment"
        android:label="@string/title_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/storyFragment"
        android:name="com.example.finalproject_breathe_again.ui.craving.story.StoryFragment"
        android:label="Inspiring Stories"
        tools:layout="@layout/fragment_story" />

    <fragment
        android:id="@+id/breathingFragment"
        android:name="com.example.finalproject_breathe_again.ui.craving.breathing.BreathingFragment"
        android:label="Breathing Exercise"
        tools:layout="@layout/fragment_breathing" />

</navigation>