<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    tools:context=".SignUpActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/singUp_createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:textSize="@dimen/textsize"
        android:layout_marginTop="@dimen/defaultMargin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/singUp_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="@dimen/defaultMargin"
        app:layout_constraintTop_toBottomOf="@id/singUp_createAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="12dp"
        app:layout_constraintWidth_percent="0.8" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/singUp_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/defaultMargin"
        app:layout_constraintTop_toBottomOf="@id/singUp_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="12dp"
        app:layout_constraintWidth_percent="0.8" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/singUp_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/defaultMargin"
        app:layout_constraintTop_toBottomOf="@id/singUp_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="12dp"
        app:layout_constraintWidth_percent="0.8" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/singUp_cigarettes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/how_many_cigarettes"
        android:inputType="number"
        android:layout_marginTop="@dimen/defaultMargin"
        app:layout_constraintTop_toBottomOf="@id/singUp_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="12dp"
        app:layout_constraintWidth_percent="0.8" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_start_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/start_date"
        android:textSize="@dimen/textSize"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/singUp_cigarettes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <DatePicker
        android:id="@+id/singUp_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintTop_toBottomOf="@id/tv_start_date_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/singUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sing_up"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/singUp_start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6" />


</androidx.constraintlayout.widget.ConstraintLayout>