<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:layoutDirection="ltr"
    android:padding="16dp">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="Breathe. Focus. Relax. 💨"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black" />




    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_breathing"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_margin="@dimen/defaultMargin"
        android:layout_below="@id/tv_title"
        android:backgroundTint="@color/blue"
        android:text="@string/breathing_exercise"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="@dimen/iconPadding_radius"
        app:icon="@drawable/ic_breathing"
        app:iconTint="@null"
        app:iconGravity="start"
        app:iconPadding="@dimen/iconPadding_radius"
        app:iconSize="@dimen/iconSize" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_stories"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_margin="@dimen/defaultMargin"
        android:layout_below="@id/btn_breathing"
        android:backgroundTint="@color/blue"
        android:text="@string/inspiring_stories"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="@dimen/iconPadding_radius"
        app:icon="@drawable/ic_stories"
        app:iconTint="@null"
        app:iconGravity="start"
        app:iconPadding="@dimen/iconPadding_radius"
        app:iconSize="@dimen/iconSize" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_challenge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_margin="@dimen/defaultMargin"
        android:layout_below="@id/btn_stories"
        android:backgroundTint="@color/blue"
        android:text="@string/game_run_from_cigarette"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="@dimen/iconPadding_radius"
        app:icon="@drawable/cigarette"
        app:iconTint="@null"
        app:iconGravity="start"
        app:iconPadding="@dimen/iconPadding_radius"
        app:iconSize="@dimen/iconSize" />
</RelativeLayout>